--- a/6.1.0/Dockerfile
+++ b/6.1.0/Dockerfile
@@ -1,8 +1,10 @@
 FROM arugaldocker/java:1.0
 
-RUN  wget -P /usr http://mirror.bit.edu.cn/apache/skywalking/6.1.0/apache-skywalking-apm-6.1.0.tar.gz && \
+ARG VERSION=6.1.0
+
+RUN  wget -P /usr http://mirrors.tuna.tsinghua.edu.cn/apache/skywalking/6.1.0/apache-skywalking-apm-${VERSION}}.tar.gz && \
         cd /usr && mkdir skywalking && \
-        tar -zxvf apache-skywalking-apm-6.1.0.tar.gz && \
+        tar -zxvf apache-skywalking-apm-${VERSION}.tar.gz && \
         mv apache-skywalking-apm-bin/agent /usr/skywalking && \
         rm -rf apache-skywalking-apm-*
 
